# Editor

./: CMakeLists.txt
include/: controller.h  controller_interface.h  model.h  model_interface.h  view.h  view_interface.h
src/: controller.cpp  main.cpp  model.cpp
